--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multiselect</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -16,32 +16,12 @@
             </div>
             <ul class="multiselect__list" id="multiselect-menu-1" aria-labelledby='multiselect-menu' aria-hidden="true">
                 <li class="multiselect__item" tabindex="0" aria-checked="false" data-value="search">
-                    <input class="multiselect__checkbox-input main_item" type="checkbox" id="item-0" />
+                    <input class="multiselect__checkbox-input main_item" type="checkbox" id="item-0">
                     <label class="multiselect__checkbox-label" for="item-0">
-                        <input class="multiselect__search" type="text" tabindex="0" role="search" />
-                        <img class="multiselect__search-icon" src="./img/search.svg" alt="Search" />
+                        <input class="multiselect__search" type="text" tabindex="0" role="search">
+                        <img class="multiselect__search-icon" src="./img/search.svg" alt="Search">
                     </label>
                 </li>
-                <!-- <li class="multiselect__item" tabindex="0" aria-checked="false" data-value="kyiv">
-                    <input class="multiselect__checkbox-input" type="checkbox" id="item-1" />
-                    <label class="multiselect__checkbox-label" for="item-1">Kyiv</label>
-                </li>
-                <li class="multiselect__item" tabindex="0" aria-checked="false" data-value="kharkiv">
-                    <input class="multiselect__checkbox-input" type="checkbox" id="item-2" />
-                    <label class="multiselect__checkbox-label" for="item-2">Kharkiv</label>
-                </li>
-                <li class="multiselect__item" tabindex="0" aria-checked="false" data-value="lviv">
-                    <input class="multiselect__checkbox-input" type="checkbox" id="item-3" />
-                    <label class="multiselect__checkbox-label" for="item-3">Lviv</label>
-                </li>
-                <li class="multiselect__item" tabindex="0" aria-checked="false" data-value="odessa">
-                    <input class="multiselect__checkbox-input" type="checkbox" id="item-4" />
-                    <label class="multiselect__checkbox-label" for="item-4">Odessa</label>
-                </li>
-                <li class="multiselect__item" tabindex="0" aria-checked="false" data-value="dnipro">
-                    <input class="multiselect__checkbox-input" type="checkbox" id="item-5" />
-                    <label class="multiselect__checkbox-label" for="item-5">Dnipro</label>
-                </li> -->
             </ul>
         </div>
         <p>
